# bachelor-thesis

./: .gitignore  LICENSE  README.md  goodPractices.md
src/GPS-spoofing/GZ-bridge_spoofing/: CMakeLists.txt  GZSpoofing.cpp  GZSpoofing.hpp
src/GPS-spoofing/constant_gps_bias/: CMakeLists.txt  package.xml
src/GPS-spoofing/constant_gps_bias/src/: my_node.cpp  spoof.cpp
src/missions/: hover_straight_hover_land_473989711_85471635.plan  px4_rectangle_mission.plan  staright_flight_baylands.plan  straight_flight_north_baylands.plan
